# ucichess

./: .gitignore  CMakeLists.txt  README.md  bitboard.cpp  bitboard.h  board.cpp  board.h  chess.h  commands.h  compass.cpp  compass.h  eval.cpp  eval.h  hash.h  main.cpp  move.h  move_gen.cpp  move_gen.h  piece_location_tables.cpp  piece_location_tables.h  search.cpp  search.h  square.h
DeBruijnGen/: genBitScan.cpp
